fix:statistics
